--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -13,14 +13,16 @@
     font-weight: bolder;
     border: none;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
   
-    &:hover {
+  &:hover {
       background-color: white;
       color: black;
       border: 1px solid black;
-    }
+  }
 
-    &.google-sign-in {
+  &.google-sign-in {
       background-color: #4285f4;
       color: white;
 
@@ -28,6 +30,19 @@
         background-color: #357ae8;
         border: none;
       }
+    } 
+    
+  &.inverted {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+
+    &:hover {
+      background-color: black;
+      color: white;
+      border:none;
     }
+  }
 }
+  
   
