--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -37,16 +37,16 @@
       width: 100%;
       height: 5%;
       display: flex;
-      justify-content: space-between;
+      justify-content: center; 
       font-size: 18px;
   
       .name {
-        width: 90%;
+        width: 60%;
         margin-bottom: 15px;
       }
   
       .price {
-        width: 10%;
+        width: 40%;
       }
     }
   }
